# dabara_lang

./: .gitignore  AGENTS.md  BLOG_POST.md  CHANGELOG.md  CHANGELOG_NEXT.md  CHANGELOG_RESUME_v0.1.2.md  CHANGELOG_RESUME_v0.1.3.md  CORRECTION_COMMENTAIRES.md  Cargo.toml  DEPLOY_QUICK.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  EBOOK_README.md  EXEMPLES_REORGANISATION.md  GUIDE_TUTORIELS.md  NOUVELLES_FONCTIONNALITES.md  PUBLISH_GUIDE.md  README.md  SETUP_SUMMARY.md  TEST_FIXES_SUMMARY.md  VERSION_0.1.3.md  build-docs.sh  build_ebook.sh  changelog_0.1.0.md  changelog_0.1.2.md  changelog_0.1.3.md  dabara_ebook.html  dabara_ebook.tex  dabara_ebook_print.html  exemple_syntaxe_simple.ha  generate_pdf.sh  index.html  kudi.ha  netlify.toml  package.json  release.sh  serve.sh  test01.ha  test_examples.sh  (+6 more)
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  release.yml
.qoder/: settings.json
.qoder/quests/: dabara-language-creation.md
docs/: DEPLOYMENT.md  README.md  book.toml  build-and-deploy.sh
docs/src/: SUMMARY.md  installation.md  introduction.md  quick-start.md  roadmap-v1.0.md  roadmap.md
docs/src/appendix/: error-messages.md  translation-table.md
docs/src/architecture/: error-handling.md  interpreter.md
docs/tuts/: TUTORIEL_00_INTRODUCTION.md  TUTORIEL_01_BASES.md  TUTORIEL_02_TYPES.md  TUTORIEL_04_CONDITIONS.md
examples/: README.md  benchmark.ha  hello.ha  test_001_variables_et_affichage.ha  test_001b_listes.ha  test_001c_arithmetique.ha  test_002_entree_utilisateur.ha  test_002_entree_utilisateur_simple.ha  test_003_conditions.ha  test_004_fonctions.ha  test_004_fonctions_attente.ha  test_005_unicode_haoussa.ha  test_006_programme_complet.ha  test_007_arithmetic_operators.ha  test_008_functions_working.ha  test_009_loops.ha  test_011_list_operations.ha  test_012_string_operations.ha  test_013_float_numbers.ha  test_014_var_keyword.ha  test_nada_minimal.ha  test_var_minimal.ha
examples/first/: main.ha
examples/old_examples/: a_test_nouvelles_fonctions.ha  new_t.ha  test_fonction.ha  test_input.ha  test_minimal.ha  test_sans_parentheses.ha  test_simple.ha  test_statement_expression.ha  wasan_lissafi.ha
plans/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  PDF_GENERATION_README.md  TUTORIEL_03_OPERATIONS.md  TUTORIEL_07_FONCTIONS.md  VAR_KEYWORD_ADDITION.md  WORK_SUMMARY.md  book_cover_specs.md  dabara_evolution_plan.md  ebook_plan_45_pages.md  v1.0_and_android_roadmap.md  wasm_roadmap.md
programms/: barka.ha  calc.ha  math.ha  sanu.ha
src/: claude.md  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  wasm.rs
src/stdlib/: convert.rs  list_utils.rs  math.rs  mod.rs  string_utils.rs
tests/: integration_tests.rs  test_functions.rs
web/: app.js  index.html  styles.css
(+11 files in other folders)
