[package]
name = "dabara"
version = "0.0.1"
edition = "2021"
authors = ["Ahmad"]
description = "Dabara Programming Language - Hausa syntax for everyone"
license = "MIT"
repository = "https://github.com/votre-username/dabara"
keywords = ["programming-language", "hausa", "interpreter"]
categories = ["development-tools"]

[[bin]]
name = "dabara"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[profile.release]
strip = true  # Supprime les symboles de debug
lto = true    # Link Time Optimization
codegen-units = 1  # Optimisation maximale
panic = "abort"    # Réduit la taille du binaire
