[package]
name = "dabara"
version = "0.2.0"
edition = "2021"
authors = ["Ahmad - Feyroozecode"]
description = "Dabara Programming Language - Hausa syntax for everyone"
license = "MIT"
repository = "https://github.com/feyroozecode/dabara"
keywords = ["programming-language", "hausa", "interpreter"]
categories = ["development-tools"]

[[bin]]
name = "dabara"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
]

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde", "serde-wasm-bindgen", "console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true  # Supprime les symboles de debug
lto = true    # Link Time Optimization
codegen-units = 1  # Optimisation maximale
panic = "abort"    # Réduit la taille du binaire

# Optimized profile for WASM
[profile.wasm-release]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
